--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,16 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# misc
+target
+target/*
+.project
+.classpath
+.gradle
+.gradle/*
+.settings
+.settings/*
+bin
+bin/*
+.DS_Store
