--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,18 +3,52 @@ phases:
   install:
     runtime-versions:
       java: corretto8
+      nodejs: 12.x
+    commands:
+    - echo "Installing prerequisites..."
+    - npm install --silent --no-progress -g npm
+    - npm install --silent --no-progress -g serverless
   pre_build:
     commands:
-    - echo In the pre_build phase...
+    - echo "PRE-BUILD - Arranging files..."
+    - echo $CROSS_ACCOUNT_ROLE
+    - echo $CF_EXECUTION_ROLE
+    - echo $TARGET_ACCOUNT_ID
+    - echo $STAGE
+    - cd $CODEBUILD_SRC_DIR
+    - mkdir ./serverless-package
+    - chmod +x aws-profile-setup.sh
+    - npm install --silent --no-progress
   build:
     commands:
-    - echo Build started on `date`
-  post_build:
-    commands:
-    - echo Build completed on `date`
-    - mvn package
-    - mv target/oktank-serverless-demo-1.0-SNAPSHOT-lambda-package.zip oktank-serverless-demo-1.0-SNAPSHOT-lambda-package.zip
+      - echo Build started on `date`
+      - cd $CODEBUILD_SRC_DIR
+      - mvn clean package
+      ##################################### Generate serverless package. ###################################
+      - . ./aws-profile-setup.sh
+      - sls package --package serverless-package --stage $STAGE --targetAccountId $TARGET_ACCOUNT_ID --cfnRoleArn $CF_EXECUTION_ROLE
+      - ls serverless-package
+      #######################################################################################################
+      # Deploy serverless package
+      - echo "Start Deploy"
+      - sls deploy --package serverless-package --stage $STAGE --targetAccountId $TARGET_ACCOUNT_ID --cfnRoleArn $CF_EXECUTION_ROLE
+      #######################################################################################################
+      #################### Retrieve API Endpoint and pass it on as a build artifact #######################
+      - endpoint=$(sls info --verbose --stage $STAGE --targetAccountId $TARGET_ACCOUNT_ID --cfnRoleArn $CF_EXECUTION_ROLE | grep "ServiceEndpoint:")
+      - API_URL=$(echo $endpoint | cut -d' ' -f2)
+      - echo $API_URL
+      - echo $API_URL > api-endpoint.txt
+      - cat api-endpoint.txt
+      - echo "End Deploy"
+      #######################################################################################################
+post_build:
+  commands:
+  - echo Build completed on `date`
 artifacts:
   files:
-  - oktank-serverless-demo-1.0-SNAPSHOT-lambda-package.zip
-  - template.yml
+    # Build Artifact containing API Endpoint
+    - api-endpoint.txt
+  discard-paths: no
+  base-directory: $CODEBUILD_SRC_DIR
+
+
