--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
         <dependency>
             <groupId>com.amazonaws.serverless</groupId>
             <artifactId>aws-serverless-java-container-springboot2</artifactId>
-            <version>[1.4,)</version>
+            <version>[1.5,)</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/io.symphonia/lambda-logging -->
@@ -42,6 +42,19 @@
             <artifactId>lambda-logging</artifactId>
             <version>1.0.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    
+      <dependency>
+        <groupId>com.amazonaws</groupId>
+        <artifactId>aws-java-sdk-rdsdata</artifactId>
+        <version>1.11.562</version>
+      </dependency>
     </dependencies>
 
     <profiles>
@@ -126,6 +139,4 @@
             </build>
         </profile>
     </profiles>
-
-
 </project>
